# Sensor

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  DATA_ETHICS.md  LICENSE  README.md  constraints.txt  datapackage.json  pyproject.toml  requirements-dev.txt  requirements.txt  sensor_data.py
.github/: dependabot.yml
.github/workflows/: ci.yml
Sensor's data/: DATA_DICTIONARY.md  HRV.csv  Psychometric_Test_Results.csv  hr.csv  ibi.csv
analysis/: explore_data.ipynb
data/: DATA_DICTIONARY.md  Psychometric_Test_Results.csv
images/: CREDITS.md
scripts/: __init__.py  derive.py  shift_time.py
tests/: test_data_contract.py  test_data_integrity.py  test_derive.py  test_notebooks.py  test_sensor_data.py  test_shift_time.py
