[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-anxiety-dataset"
version = "0.1.0"
description = "Biometric sensor review and sample dataset for anxiety-detection research."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Urme Bose" }]
dependencies = [
    "pandas>=2",
    "numpy>=1.23",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "nbformat>=5.9",
    "nbmake>=1.5",
    "ipykernel>=6.25",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/urme-b/Sensor"
Repository = "https://github.com/urme-b/Sensor"

[tool.setuptools]
py-modules = ["sensor_data"]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
