[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-anxiety-dataset"
version = "0.1.0"
description = "Biometric sensor review and sample dataset for anxiety-detection research."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Urme Bose" }]
dependencies = [
    "pandas>=2",
    "numpy>=1.23",
    "matplotlib>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "nbformat>=5.9",
    "nbmake>=1.5",
    "ipykernel>=6.25",
    "ruff>=0.6",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/urmeo/Sensor"
Repository = "https://github.com/urmeo/Sensor"

[tool.setuptools]
py-modules = ["sensor_data"]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E501"]  # exploratory notebook: long palette dicts / plot titles are fine

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
